# RAG-LLM-Metric

./: .gitignore  README.md  config.yml  metric_validation_summary_all.csv  pyproject.toml
agent/: agent_test2.py  metric_discussion_agent.py  persona_agent.py  persona_arena.py
analysis/cross_domain/: domain_robustness_evaluation.csv
analysis/cross_model/: combined_Adherence_Faithfulness_faithfulness_score.csv  similarity_passrate.csv
analysis/cross_model/cosine_similarity/: combined_Adherence_Faithfulness_faithfulness_score.csv  (+9 more)
data_annotator/: annotators.py  base_annotator.py  prompt_manager.py
evaluator/: base_evaluator.py  evaluators.py  prompt_manager.py
execution_pipeline/: execution_pipeline.py
notebooks/: evaluator_example.ipynb  plotting_ADAMS_vs_RAGAS.ipynb  ragas_dataset.csv
output/json/: virtual_customer_0.json  virtual_customer_1.json  virtual_customer_2.json  virtual_customer_3.json  virtual_customer_4.json
output/prettified/: virtual_persona_0.txt  virtual_persona_1.txt  virtual_persona_2.txt  virtual_persona_3.txt  virtual_persona_4.txt
persona/: generate_persona.py
scripts/: agent_e2e.py  annotation_pipeline_example.py  cross_domain_analysis.py  deepseek_7B.py  deepseek_7B_experiment_pipeline.py  evaluation_pipeline_context_utilization.py  evaluation_pipeline_example.py  evaluation_pipeline_example_pandas.py  metric_validation_protocol.py  mistral_experiment_pipeline.py  synthetic_mistake_pipeline_example.py
scripts/cross_model/: cosine_similarity.py  data_cleaning.py  metric_robustness.py
utils/: base.py  constants.py  llm.py
(+17 files in other folders)
